cabal-version:      3.6
name:               cnft
version:            1.0
synopsis:           cnft
author:             Andrew Wright
maintainer:         aw@ovit.us
extra-source-files: CHANGELOG.md

executable cnft
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , cardano-api
                    , directory
                    , plutus-ledger-api
                    , plutus-script-utils
                    , plutus-tx
                    , plutus-tx-plugin
                    , serialise

    other-modules:    CNFTMintingPolicy
                    , CNFTValidator
                    , Serialise

    default-language: Haskell2010
 
    hs-source-dirs: src   

    ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
